# Retrospective

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  a1_experimental_01.prt  a1_experimental_01.vmx  a1_tunnel_01.vmf  a1_warehouse_01.vmf
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  task.yml
.github/workflows/: audit.yml
docs/: ARCHITECTURE.md  CONTRACTS.md  CONTRIBUTING.md  CPP_LEARNING_PATH.md  CPP_RUST_MENTAL_MODEL.md  DECISIONS.md  NOW.md  PHASE1_BOOTSTRAP.md  PHASE2_SDK_WIRING.md  README.md  SOURCE_MOD_WIRING.md  WORKFLOWS.md  XTASK.md
native/include/: retrospective_ffi.h  retrospective_loader.hpp
native/phase1_harness/: CMakeLists.txt
native/source_mod/: retrospective_source_bridge.cpp  retrospective_source_bridge.hpp
native/source_mod/sdk2013/: retrospective_sdk_bridge.cpp  retrospective_sdk_bridge.h
native/src/: phase1_harness_main.cpp  retrospective_loader.cpp
patches/source-sdk-2013/: 0001-wire-retrospective-sdk-bridge.patch
rust/retrospective_core/: Cargo.toml
rust/retrospective_core/src/: lib.rs
rust/sandbox/cpp_playground/: CMakeLists.txt  README.md
rust/sandbox/cpp_playground/src/: main.cpp
rust/xtask/src/: main.rs
scripts/: build_phase1_harness.sh  build_phase1_linux32.sh  phase2_build_rust_core_for_sdk.sh  phase2_build_source_sdk.sh  phase2_launch_hl2mp_with_core.sh  run_cpp_playground.sh  run_phase1_harness.sh
